# qail

./: .gitignore  Bugs.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  UNSAFE_CHECKLIST.md  deny.toml  docker-compose.yml  log  migration_multi_samples.md  multi_ops_agent_plan.md  qail.toml  roadmap.md  schema.qail  status.md
cli/: Cargo.toml  README.md
cli/src/: backup.rs  branch.rs  colors.rs  exec.rs  init.rs  introspection.rs  lib.rs  lint.rs  migrations.rs  qail.io.code-workspace  repl.rs  resolve.rs  schema.rs  schema_tools.rs  shadow.rs  snapshot.rs  sql_gen.rs  sync.rs  time.rs  util.rs  vector.rs  worker.rs
cli/src/migrations/: analyze.rs  apply.rs  create.rs  down.rs  failpoint.rs  lock.rs  mod.rs  plan.rs  policy.rs  receipt.rs  reset.rs  risk.rs  rollback.rs  status.rs  types.rs  up.rs  verify.rs  watch.rs
cli/src/shadow/: shadow_state_cutover_tests.rs
cli/tests/: raw_usage_allowlist.rs  schema_cli.rs
core/: Cargo.toml  README.md
core/examples/: ast_bench.rs  db_integration_test.rs  parser_chaos_test.rs  rls_proof_demo.rs  spark_safety_demo.rs  test_insert_sql.rs  test_multiline_sql.rs  test_param_repro.rs  test_qail_output.rs  test_real_span.rs  test_schema_parse.rs  test_simple_select.rs  test_subquery_sql2.rs  typed_codegen_test.rs  whatsapp_insights.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: wire_decode.rs
core/src/: access.rs  branch.rs  build.rs  codegen.rs  config.rs  error.rs  lib.rs  rls.rs  sanitize.rs  schema.rs  schema_source.rs  typed.rs  validator.rs  wire.rs
core/src/access/: columns.rs  config.rs  error.rs  ident.rs  model.rs  operations.rs  tests.rs
core/src/analyzer/: impact.rs  mod.rs  scanner.rs  text_qail.rs
core/src/ast/: cages.rs  conditions.rs  expr.rs  joins.rs  mod.rs  operators.rs  values.rs
core/src/fmt/: mod.rs  tests.rs
core/src/migrate/: alter.rs  diff.rs  mod.rs  named_migration.rs  parser.rs  policy.rs  policy_parser.rs  schema.rs  types.rs
core/src/optimizer/: mod.rs  nested_batch.rs  normalized_mutation.rs  normalized_select.rs  passes.rs
core/src/parser/: mod.rs  query_file.rs  schema.rs
core/src/proptest/: arbitrary.rs  invariants.rs  mod.rs  roundtrip.rs
core/src/rls/: mod.rs  tenant.rs
core/src/transformer/: mod.rs  registry.rs  traits.rs
core/src/transpiler/: conditions.rs  (+6 more)
core/tests/: no_raw_apis.rs  security_hardening.rs  transpiler_correctness.rs
encoder/: Cargo.toml  README.md
encoder/include/: qail_encoder.h
encoder/src/: lib.rs
gateway/: Cargo.toml  GAP.md  LICENSE-BSL  README.md
gateway/docs/: grafana-dashboard.json  slo-runbook.md
gateway/examples/: benchmark.rs  chaos_ab.rs  gateway_benchmark.rs  schema_stress.yaml  serve.rs  stress.rs  test_binary.rs
gateway/src/: access.rs  auth.rs  cache.rs  concurrency.rs  config.rs  db_backpressure.rs  error.rs  event.rs  handler.rs  idempotency.rs  json_input.rs  jwks.rs  lib.rs  metrics.rs  middleware.rs  policy.rs  rest.rs  router.rs  schema.rs  server.rs  tenant_guard.rs  transaction.rs  ws.rs
gateway/tests/: access_policy_live.rs  bench_cte_depth.rs  bench_pg_vs_qdrant.rs  complex_gateway_live.rs  hybrid_rag.rs  raw_usage_guard.rs  rpc_integration.rs
mcp/: Cargo.toml  README.md
mcp/src/: lib.rs  main.rs
pg/: Cargo.toml  README.md
pg/examples/: abba_qail_native_pgx.sh  abba_qail_pgx.sh  abba_qail_pgx_modes.sh  abba_qail_tokio_postgres.sh  array_3d_test.rs  asyncpg_benchmark.py  auto_mode_soak.rs  auto_mode_weird.rs  battle_cancel.rs  battle_chatty.rs  battle_comparison.rs  battle_conversation_detail.rs  battle_conversations.rs  battle_fuzz.rs  battle_herd.rs  battle_math.rs  battle_network.rs  battle_oom.rs  battle_params.rs  battle_pipeline.rs  battle_qail_row.rs  battle_restart.rs  battle_rls.rs  battle_stack.rs  battle_test.rs  battle_zombie.rs  buffer_stress.rs  builder_test.rs  cache_test.rs  chaos_test.rs  complex_test.rs  copy_benchmark.rs  cte_real_test.rs  cte_test.rs  data_safety_stress_test.rs  db_benchmark.rs  deep_stress_test.rs  encoder_chaos_test.rs  encoding_benchmark.rs  expr_test.rs  (+58 more)
pg/fuzz/: Cargo.toml
pg/src/: lib.rs
pg/tests/: access_checked_live.rs  cached_desync_hardening.rs  copy_protocol_hardening.rs  cursor_live.rs  explain_integration.rs  gss_linux_smoke.rs  gssenc_negotiation.rs  integration.rs  io_uring_backend_smoke.rs  merge_integration.rs  pool_hot_statement_hardening.rs  protocol_version_negotiation.rs  raw_usage_guard.rs  recursive_cte_live.rs  red_team_integration.rs  red_team_stress.rs  red_team_wire.rs  replication_e2e.rs  replication_protocol_hardening.rs  rls_integration.rs  rls_pipeline_hardening.rs  set_ops_live.rs  startup_protocol_hardening.rs  test_setup.sql  tls_integration.rs  wire_decode_fuzz.rs  wire_proptest.rs  wire_protocol_hardening.rs
qail-encoder/: Cargo.toml
qail-encoder/src/: lib.rs
qail-go/: Cargo.toml
qail-go/go/: driver.go  go.mod  qail.go
qail-go/src/: lib.rs
qail-pg/: Cargo.toml
qail-pg/examples/: million.rs  pipeline.rs  profile_cpu.rs  staging_test.rs  vs_orms.rs  vs_sqlx.rs
qail-pg/src/: lib.rs
qail-pg/tests/: integration.rs  tls_integration.rs
qail-wasm/: Cargo.toml
qail-wasm/src/: lib.rs
qdrant/: Cargo.toml  README.md
qdrant/examples/: batch_benchmark.rs  collection_stress_test.rs  comprehensive_benchmark.rs  fair_benchmark.rs  grpc_integration_test.rs  heavy_stress_test.rs  integration_test.rs  migration_test.rs  pool_benchmark.rs  qdrant_benchmark.rs  seed_qdrant.py  snapshot_stress_test.rs  upsert_debug.rs  upsert_test.rs
qdrant/src/: decoder.rs  driver.rs  encoder.rs  error.rs  grpc_driver.rs  lib.rs  point.rs  pool.rs  proto_encoder.rs  protocol.rs  transport.rs
qdrant/tests/: e2e_qdrant.rs  e2e_weird.rs
workflow/: Cargo.toml  README.md
workflow-postgres/: Cargo.toml  README.md
workflow-postgres/src/: executor.rs  lib.rs  store.rs  tables.rs  util.rs
workflow-postgres/tests/: live_postgres.rs
workflow/src/: channel.rs  context.rs  engine.rs  lib.rs  payment.rs  registry.rs  runtime.rs  state.rs  step.rs
(+1084 files in other folders)
