[workspace]
resolver = "2"
members = [
    "qail-core",
    "qail-cli",
    "qail-bench",
    "qail-lsp",
    "qail-wasm",
    "qail-ffi",
    "qail-pg",
    # qail-macros removed: String-based approach deprecated in favor of pure AST builder API
]

[workspace.lints.rust]
warnings = "deny"
unused = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"

# Profiling: enable debug symbols in release builds
[profile.release]
debug = true
