[package]
name = "qail"
version = "0.18.1"
edition = "2024"
description = "Schema-first database toolkit - migrations, diff, lint, and query generation"
license = "MIT"
repository = "https://github.com/qail-io/qail"
readme = "README.md"
categories = ["database", "command-line-utilities", "parser-implementations"]
keywords = ["db", "sql", "cli", "query", "database"]

[dependencies]
qail-core = { path = "../core", version = "0.18.1", features = ["analyzer"] }
qail-pg = { path = "../pg", version = "0.18.1" }
qail-qdrant = { path = "../qdrant", version = "0.18.1", optional = true }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustyline = "14.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "fs"] }
url = "2.5"
notify-debouncer-full = "0.4"
reqwest = { version = "0.12", features = ["json"], optional = true }
toml = "0.8"

[features]
default = []
vector = ["dep:qail-qdrant", "dep:reqwest"]

[lints]
workspace = true
