[package]
name = "qail"
version = "0.24.2"
edition = "2024"
description = "Schema-first database toolkit - migrations, diff, lint, and query generation"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
readme = "README.md"
categories = ["database", "command-line-utilities", "parser-implementations"]
keywords = ["db", "sql", "cli", "query", "database"]

[dependencies]
qail-core = { path = "../core", version = "0.24.2", features = ["analyzer"] }
qail-pg = { path = "../pg", version = "0.24.2" }
qail-qdrant = { path = "../qdrant", version = "0.24.2", optional = true }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustyline = { version = "14.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "fs"] }
notify-debouncer-full = { version = "0.4", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
toml = "1.0"

[features]
default = []
repl = ["dep:rustyline"]
watch = ["dep:notify-debouncer-full"]
vector = ["dep:qail-qdrant", "dep:reqwest"]
full = ["repl", "watch", "vector"]

[lints]
workspace = true

