[package]
name = "qail"
version = "1.3.2"
edition = "2024"
description = "QAIL SchemaOps CLI - schema pull, drift diff, phased migrations, lint, and AST query tooling"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
homepage = "https://dev.qail.io"
documentation = "https://docs.rs/qail"
readme = "README.md"
categories = ["database", "command-line-utilities", "parser-implementations"]
keywords = ["postgres", "migration", "schema", "cli", "database"]

[dependencies]
qail-core = { path = "../core", version = "1.3.2", features = ["analyzer"] }
qail-pg = { path = "../pg", version = "1.3.2" }
qail-qdrant = { path = "../qdrant", version = "1.3.2", optional = true }
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustyline = { version = "17.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "fs"] }
notify-debouncer-full = { version = "0.7", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
toml = "1.1"
hmac = "0.12"
sha2 = "0.10"
url = "2.5"

[features]
default = []
repl = ["dep:rustyline"]
watch = ["dep:notify-debouncer-full"]
vector = ["dep:qail-qdrant", "dep:reqwest"]
full = ["repl", "watch", "vector"]

[lints]
workspace = true
