[package]
name = "qail-encoder"
version = "0.27.2"
edition = "2024"
description = "QAIL Encoder - Lightweight wire protocol encoding (no I/O, no TLS)"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
qail-core = { path = "../core", version = "0.27.2" }
qail-pg = { path = "../pg", version = "0.27.2", default-features = false, optional = true }

[features]
default = []
response = ["qail-pg"]

# Minimal dependencies - just encoding by default!
# Enable "response" feature for response parsing

[lints]
workspace = true
