[package]
name = "qail-encoder"
version = "1.3.4"
edition = "2024"
description = "QAIL Encoder ABI - lightweight protocol/query encoding for non-Rust transports"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
homepage = "https://dev.qail.io"
documentation = "https://docs.rs/qail-encoder"
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
qail-core = { path = "../core", version = "1.3.4" }
qail-pg = { path = "../pg", version = "1.3.4", default-features = false, optional = true }

[features]
default = []
response = ["qail-pg"]

# Minimal dependencies - just encoding by default!
# Enable "response" feature for response parsing

[lints]
workspace = true
