[package]
name = "qail-gateway"
version = "0.27.6"
edition = "2024"
description = "QAIL Gateway - Native data layer replacing REST/GraphQL"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
readme = "README.md"
keywords = ["database", "gateway", "api", "binary-protocol"]
categories = ["database", "web-programming"]

[dependencies]
# Core QAIL
qail-core = { path = "../core", version = "0.27.6" }
qail-pg = { path = "../pg", version = "0.27.6" }
qail-qdrant = { path = "../qdrant", version = "0.27.6", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP Server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout", "trace", "compression-full", "set-header", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# YAML parsing for policies
serde_yaml = "0.9"

# JWT validation
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
thiserror = "2.0"

# Logging
tracing = "0.1"

# URL parsing
url = "2.5"
percent-encoding = "2"

# WebSocket streams
futures = "0.3"

# Prometheus metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Cache
moka = { version = "0.12", features = ["sync"] }

# UUID validation
uuid = { version = "1", features = ["v4"] }

# URL encoding/decoding for filter values
urlencoding = "2"

# Byte buffers for AST SQL generation
bytes = "1"

# HTTP client for event trigger webhooks
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Timestamps for event payloads
chrono = "0.4"

# Base64 decoding for JWT headers (JWKS kid extraction)
base64 = "0.22"

# Stable request fingerprinting for idempotency keys
sha2 = "0.10"

[features]
default = ["qdrant"]
qdrant = ["dep:qail-qdrant"]
enterprise-gssapi = ["qail-pg/enterprise-gssapi"]
legacy-raw-tests = []

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "1.0"
hdrhistogram = "7"
proptest = "1.10.0"
