[package]
name = "qail-mcp"
version = "1.3.3"
edition = "2024"
description = "Model Context Protocol server for the QAIL AST Kernel"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
homepage = "https://dev.qail.io"
documentation = "https://docs.rs/qail-mcp"
readme = "README.md"
categories = ["development-tools", "database", "parser-implementations"]
keywords = ["qail", "mcp", "ast", "postgres", "llm"]

[[bin]]
name = "qail-mcp"
path = "src/main.rs"

[dependencies]
qail-core = { path = "../core", version = "1.3.3" }
serde_json = "1.0"

[lints]
workspace = true
