[package]
name = "qail-pg"
version = "0.27.10"
edition = "2024"
description = "Rust PostgreSQL driver for typed AST queries with direct wire-protocol execution"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
documentation = "https://docs.rs/qail-pg"
keywords = ["postgres", "postgresql", "driver", "async", "database"]
categories = ["database", "asynchronous"]
readme = "README.md"

[features]
default = []
# Archived examples/tests that still reference removed raw APIs.
# Keep disabled in normal builds.
legacy-raw-examples = []
# Native Linux io_uring transport for plain TCP.
# Backward-compatible feature used in cfg(feature = "io_uring") gates.
io_uring = ["dep:io-uring"]
# Preferred external name to signal native Linux backend intent.
native-io-uring = ["io_uring"]
# Enable chrono DateTime parsing in PgRow::datetime()
chrono = ["dep:chrono"]
# Enable uuid::Uuid parsing in PgRow::uuid_typed()
uuid = ["dep:uuid"]
# Enable built-in Linux Kerberos/GSS provider for enterprise auth flows.
enterprise-gssapi = []
# Enable libpq benchmark/comparison examples (requires libpq C library)
libpq = []

[dependencies]
qail-core = { version = "0.27.10", path = "../core" }
postgres-protocol = "0.6"
bytes = "1.5"
tokio = { version = "1.50.0", features = ["net", "io-util", "sync", "rt", "time"] }

# SCRAM-SHA-256 authentication
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
rand = "0.9"
md-5 = "0.10"

# Zero-allocation formatting for COPY encoder
itoa = "1"
ryu = "1"

# TLS/SSL support
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
tracing = "0.1"
metrics = "0.24"

# Optional: Ergonomic row extraction
chrono = { version = "0.4", optional = true }
uuid = { version = "1.23", optional = true }

# io_uring support (Linux only, opt-in via feature flag)
# Use `--features io_uring` for native Linux builds
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4" }
proptest = "1.11.0"
tokio-postgres = "0.7.17"
futures-util = "0.3"

[[example]]
name = "battle_qail_row"
required-features = ["chrono", "uuid"]

[[example]]
name = "libpq_benchmark"
required-features = ["libpq"]

[[example]]
name = "libpq_pool"
required-features = ["libpq"]

[[example]]
name = "libpq_only"
required-features = ["libpq"]

[[example]]
name = "array_3d_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_chatty"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_comparison"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_fuzz"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_math"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_network"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_oom"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_pipeline"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_stack"
required-features = ["legacy-raw-examples"]

[[example]]
name = "battle_zombie"
required-features = ["legacy-raw-examples"]

[[example]]
name = "buffer_stress"
required-features = ["legacy-raw-examples"]

[[example]]
name = "cache_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "chaos_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "complex_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "copy_benchmark"
required-features = ["legacy-raw-examples"]

[[example]]
name = "cte_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "data_safety_stress_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "deep_stress_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "expr_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "io_benchmark"
required-features = ["legacy-raw-examples"]

[[example]]
name = "migration_battle_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "null_byte_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "pipeline_benchmark"
required-features = ["legacy-raw-examples"]

[[example]]
name = "pipeline_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "pool_analysis"
required-features = ["legacy-raw-examples"]

[[example]]
name = "pool_exhaustion_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "pool_pipeline_bench"
required-features = ["legacy-raw-examples"]

[[example]]
name = "pool_starvation"
required-features = ["legacy-raw-examples"]

[[example]]
name = "rls_isolation_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "torture_real"
required-features = ["legacy-raw-examples"]

[[example]]
name = "torture_test"
required-features = ["legacy-raw-examples"]

[[example]]
name = "triad_demo"
required-features = ["legacy-raw-examples"]

[[example]]
name = "zombie_test"
required-features = ["legacy-raw-examples"]
