[package]
name = "qail-pg"
version = "1.3.4"
edition = "2024"
description = "Rust PostgreSQL driver for typed AST queries with direct wire-protocol execution"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
homepage = "https://dev.qail.io/rust"
documentation = "https://docs.rs/qail-pg"
keywords = ["postgres", "postgresql", "driver", "async", "database"]
categories = ["database", "asynchronous"]
readme = "README.md"

[features]
default = []
# Native Linux io_uring transport for plain TCP.
# Backward-compatible feature used in cfg(feature = "io_uring") gates.
io_uring = ["dep:io-uring"]
# Preferred external name to signal native Linux backend intent.
native-io-uring = ["io_uring"]
# Enable chrono DateTime parsing in PgRow::datetime()
chrono = ["dep:chrono"]
# Enable uuid::Uuid parsing in PgRow::uuid_typed()
uuid = ["dep:uuid"]
# Enable built-in Linux Kerberos/GSS provider for enterprise auth flows.
enterprise-gssapi = []
# Enable libpq benchmark/comparison examples (requires libpq C library)
libpq = []

[dependencies]
qail-core = { version = "1.3.4", path = "../core" }
postgres-protocol = "0.6"
bytes = "1.5"
tokio = { version = "1.50.0", features = ["net", "io-util", "sync", "rt", "time"] }

# SCRAM-SHA-256 authentication
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
rand = "0.9"
md-5 = "0.10"

# Zero-allocation formatting for COPY encoder
itoa = "1"
ryu = "1"

# TLS/SSL support
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
tracing = "0.1"
metrics = "0.24"

# Optional: Ergonomic row extraction
chrono = { version = "0.4", optional = true }
uuid = { version = "1.23", optional = true }

# io_uring support (Linux only, opt-in via feature flag)
# Use `--features io_uring` for native Linux builds
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4" }
proptest = "1.11.0"
tokio-postgres = "0.7.17"
futures-util = "0.3"

[[example]]
name = "battle_qail_row"
required-features = ["chrono", "uuid"]

[[example]]
name = "libpq_benchmark"
required-features = ["libpq"]

[[example]]
name = "libpq_pool"
required-features = ["libpq"]

[[example]]
name = "libpq_only"
required-features = ["libpq"]
