[package]
name = "qail-go"
version = "0.10.1"
edition = "2024"
description = "QAIL Go bindings - Rust FFI for CGO"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
qail-core = { path = "../qail-core", version = "0.10.1" }
qail-pg = { path = "../qail-pg", version = "0.10.1" }
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
