[package]
name = "qail-wasm"
version = "0.5.1-alpha"
edition = "2021"
description = "QAIL parser and transpiler for JavaScript/TypeScript via WebAssembly"
license = "MIT"
repository = "https://github.com/qail-rs/qail"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# We'll inline the parser/transpiler logic to avoid sqlx dependency
nom = "7.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
