[package]
name = "qail-qdrant"
version = "0.26.1"
edition = "2024"
description = "QAIL driver for Qdrant vector database"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
readme = "README.md"
keywords = ["qail", "qdrant", "vector", "database", "ai"]
categories = ["database"]

[dependencies]
qail-core = { path = "../core", version = "0.26.1" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bytemuck = "1"
# gRPC transport
h2 = "0.4"
http = "1"
futures-util = "0.3"
# TLS (rustls - no system openssl needed)
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
qdrant-client = { version = "1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1"

[build-dependencies]
tonic-build = "0.13"

[lints.rust]
warnings = "deny"
unused = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"

[features]
default = []
official-client-bench = ["dep:qdrant-client"]

[[example]]
name = "comprehensive_benchmark"
required-features = ["official-client-bench"]

[[example]]
name = "qdrant_benchmark"
required-features = ["official-client-bench"]

[[example]]
name = "fair_benchmark"
required-features = ["official-client-bench"]
