[package]
name = "qail-workflow-postgres"
version = "1.3.2"
edition = "2024"
description = "PostgreSQL storage backend for qail-workflow using QAIL AST operations"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
readme = "README.md"
keywords = ["qail", "workflow", "postgres", "state-machine"]
categories = ["database", "asynchronous"]

[dependencies]
qail-core = { path = "../core", version = "1.3.2" }
qail-pg = { path = "../pg", version = "1.3.2" }
qail-workflow = { path = "../workflow", version = "1.3.2" }
async-trait = "0.1"
chrono = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
