[package]
name = "qail-workflow-postgres"
version = "1.3.4"
edition = "2024"
description = "QAIL Flow Ledger - PostgreSQL workflow state, lease, idempotency, timeout, and side-effect storage"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
homepage = "https://dev.qail.io"
documentation = "https://docs.rs/qail-workflow-postgres"
readme = "README.md"
keywords = ["qail", "workflow", "postgres", "state-machine"]
categories = ["database", "asynchronous"]

[dependencies]
qail-core = { path = "../core", version = "1.3.4" }
qail-pg = { path = "../pg", version = "1.3.4" }
qail-workflow = { path = "../workflow", version = "1.3.4" }
async-trait = "0.1"
chrono = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
