[package]
name = "qail-workflow"
version = "0.24.5"
edition = "2024"
description = "Declarative state machine workflows for QAIL"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
keywords = ["qail", "workflow", "state-machine", "orchestration"]
categories = ["asynchronous"]

[dependencies]
qail-core = { path = "../core", version = "0.24.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["time", "sync"] }
chrono = { version = "0.4" }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
