[package]
name = "qail-workflow"
version = "1.3.5"
edition = "2024"
description = "QAIL Flow Engine - declarative state-machine workflows with waits, retries, and side-effect checkpoints"
license = "Apache-2.0"
repository = "https://github.com/qail-io/qail"
homepage = "https://dev.qail.io"
documentation = "https://docs.rs/qail-workflow"
readme = "README.md"
keywords = ["qail", "workflow", "state-machine", "orchestration"]
categories = ["asynchronous"]

[dependencies]
qail-core = { path = "../core", version = "1.3.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["time", "sync"] }
chrono = { version = "0.4" }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
